--- a/main/chap3_gaussian_processes.tex
+++ b/main/chap3_gaussian_processes.tex
@@ -4,7 +4,9 @@
 
 \section{Introduction}
 
-Bla bla bla... to be written
+Buildings are responsible for a large share of the global CO$_2$ emissions, more concretely, for around 37\% of them when taking into account the estimated emissions associated with producing their materials \citep[§3.2]{united2022}. Having in place energy-efficient heating and cooling systems is often highlighted as a key requirement for significantly lowering their environmental impact and marching towards a greener future \citep{iea2022}. This in turn could either be achieved by structurally changing the built environment, for instance, improving thermal isolation between indoor spaces and the outdoor space, or by making a more intelligent use of the energy at hand, guaranteeing the occupants' comfort while minimizing metrics such as thermal wasting. Control engineers are specialists in carrying out the latter task.
+
+The hope is that well tuned, specialized control algorithms could deliver better performance when compared to the simplistic strategies commonly deployed in the field, or even compared to manual regulation when occupants are given considerable actuation power \citep{stluka2018architectures}.
 
 \section{A brief overview of Gaussian process}
 \label{sec.gps}
@@ -259,7 +261,6 @@ With the thermal model \eqref{eq.thermalEnergy} and the COP curve \eqref{eq.COP}
 
 \section{MPC formulation and numerical computations}
 
-
 Given the learned GP models $\mu_i$, $i=1,2,3$ described in \eqref{eq.GPmodels}, a given maximum temperature $T_{\max}$, and our reconstructed electrical power surface, we formulate the following optimization problem to control the valves $\theta_i$ while reducing the chiller energy consumption $E_t$
 \begin{subequations}
 	\begin{align}
@@ -275,7 +276,7 @@ Given the learned GP models $\mu_i$, $i=1,2,3$ described in \eqref{eq.GPmodels},
 \end{subequations}
 where $\Theta_t = \sum_{i=1}^{3} \theta_{i,t}$ is the sum of all valve positions. The variables $\delta_t$ in \eqref{eq.constr2} are positive slacks introduced to avoid infeasibility. If needed, these can relax the temperature constraint so that the solver can return a viable control plan. Of course, their use is heavily penalized in the objective, where $\Delta_t = \sum_{i=1}^{3} \delta_{i,t}^2$ and $\rho$, $\rho_N$ are large constants, which in our case were respectively set to $100$ and $200$. The temperature constraint \eqref{eq.constr2} also accounts for prediction uncertainty as it includes the standard deviation $\text{var}^{1/2}$. Its use confers on the formulation a risk-aware quality and robustifies the closed-loop operation. The degree of conservativeness is controlled by the constant $\beta$, chosen to be $2$ as in Figure~\ref{fig.trainTestRes}. The prediction horizon was set to $N=12$ steps, which translates to 2 hours. As suggested by our notation, $T_\text{out}$ and $T_\text{sup}$ were kept constant throughout all prediction steps--but updated from one sampling period to the next. Finally, our maximum temperature value was $T_{\max} = 21$ degrees Celsius.
 
-The optimization problem \eqref{eq.optControlProb} was written in \texttt{Python} with the aid of CasADi \cite{casadi}, an automatic-differentiation package that provides gradient information for numerical solvers--in our case, the interior-point method IPOPT. As is customary in predictive control, \eqref{eq.optControlProb} was recursively solved on-line with the most recently available system information, with only the first optimal control action being transmitted to the valves. We underline that the main source of complexity in \eqref{eq.optControlProb} is the presence of the constraints \eqref{eq.constr1} and \eqref{eq.constr2}, which are highly non-linear due the GP mean and variance. Since convexity is absent, multiple local optima might exist, a fact that was indeed verified in practice. By intelligently providing solvers with high-quality initial guesses, this problem can be mostly overcome. Our particular case study relied on initializing the numerical solver with control, temperature, slack and energy trajectories obtained with a virtual PI controller. The intuition was to allow the MPC loop to build on such an initial guess and further optimize operation. For a detailed study on solve times and how the number of GP data-points impacted them, see Appendix~A.
+The optimization problem \eqref{eq.optControlProb} was written in \texttt{Python} with the aid of CasADi \citep{casadi}, an automatic-differentiation package that provides gradient information for numerical solvers--in our case, the interior-point method IPOPT. As is customary in predictive control, \eqref{eq.optControlProb} was recursively solved on-line with the most recently available system information, with only the first optimal control action being transmitted to the valves. We underline that the main source of complexity in \eqref{eq.optControlProb} is the presence of the constraints \eqref{eq.constr1} and \eqref{eq.constr2}, which are highly non-linear due the GP mean and variance. Since convexity is absent, multiple local optima might exist, a fact that was indeed verified in practice. By intelligently providing solvers with high-quality initial guesses, this problem can be mostly overcome. Our particular case study relied on initializing the numerical solver with control, temperature, slack and energy trajectories obtained with a virtual PI controller. The intuition was to allow the MPC loop to build on such an initial guess and further optimize operation. For a detailed study on solve times and how the number of GP data-points impacted them, see Appendix~A.
 
 In order to shed light on how the number of training points affects the solve times of the non-convex optimization problem \eqref{eq.optControlProb}, the following study was conducted. Five sets of GP models were trained on distinct datasets with cardinalities $N = 352$, $794$ (precisely the one used in the experiments), $1280$, $1910$ and $2643$. In all scenarios, the total number of points present in each of the GPs was approximately a third of the total number $N$, so that the models were balanced. We then generated random initial conditions, uniformly sampled from sensible intervals: $16 \leq T_{1,2,3} \leq 23$, $9 \leq T_\text{sup} \leq 13$, and $15 \leq T_\text{out} \leq 35$. Finally, we solved the warm-started non-convex MPC \eqref{eq.optControlProb} on a 2.4 GHz, i9 machine $50$ times per scenario and recorded their run times. 
 
@@ -291,7 +292,7 @@ The results are presented in Figure~\ref{fig.runTimes}, where the vertical scale
 
 \section{Experimental results}
 
-The previously described Gaussian process-based MPC formulation was deployed on the local computer and used to operate the HVAC system during multiple days in the months of October and November 2021. We report in Figure~\ref{fig.prettyCool} a four-day uninterrupted experiment carried out from November 10 to November 13 that is rather representative of the local internal and external conditions. The plots show the room temperatures and the immediate uncertainty associated with the GP predictions: $T_\text{unc} = \beta \text{var}^{1/2}$ as employed in the formulation \eqref{eq.constr2}, and evaluated for the next time-step. Both outdoor signals, the temperature and the solar radiation, are also given. The reader is reminded that, although the latter contributes with additional heat gains, it is completely unknown to the controller as explained in Section~\ref{sec.ModelTrainingAndTesting}. We highlight that the curves displayed in the figure were not filtered in any way; the sole manipulation performed with the data was the imputation of the missing temperature entries using linear interpolation. These points, however, accounted for only 43 out of the 1728 indoor temperature values gathered during the four-day experiment.
+The previously described Gaussian process-based MPC formulation was deployed on the local computer and used to operate the surgery center cooling system during multiple days in the months of October and November 2021. We report in Figure~\ref{fig.prettyCool} a four-day uninterrupted experiment carried out from November 10 to November 13 that is rather representative of the local internal and external conditions. We highlight that the curves displayed in the figure were not filtered in any way; the sole manipulation performed with the data was the imputation of the missing temperature entries using linear interpolation. These points, however, accounted for only 43 out of the 1728 indoor temperature values gathered during the four-day experiment. The first and third top plots show the room temperatures and the immediate uncertainty associated with the GP predictions $T_\text{unc} = \beta \text{var}^{1/2}$ as employed in the formulation \eqref{eq.constr2}. The second plot displays the valve positions, that is, the control variables. Both outdoor signals, the external temperature and the solar radiation are also given. The reader is reminded that, although the latter contributes with additional heat gains, it is completely unknown to the controller as explained in Section~\ref{sec.ModelTrainingAndTesting}. Lastly, the bottom plot shows the supply water temperature $T_\text{sup}$, an external disturbance that was incorporated in the GP models. This signal evolves according to the chiller own dynamics, over which we had no direct control.
 
 \afterpage{
 \begin{landscape}
@@ -304,13 +305,15 @@ The previously described Gaussian process-based MPC formulation was deployed on 
 \end{landscape}
 }
 
-Consider first the day November 10 and note the relatively high internal room temperatures when the experiment started, which were the consequence of a harsh previous day. The MPC controller used some control authority to bring the temperatures below the 21-degree line and then partially closed the valves. After the morning shift started (7 am), even though $\theta_2$ and $\theta_3$ were fully open, $T_2$ and $T_3$ violated the constraints and were only brought below 21 degrees late that evening. High initial conditions along with a peak outdoor temperature of 35 degrees overloaded the cooling system, causing violations of the indoor temperature constraint in two rooms. 
+Consider first the day, November 10, and note the relatively high room temperatures when the experiment started, which were the consequence of a harsh previous day. The MPC controller made use of some control authority to bring the temperatures below the 21-degree line before partially closing the valves. After the morning shift started (7 am), even though $\theta_2$ and $\theta_3$ were fully open, $T_2$ and $T_3$ violated the constraints and were only brought below 21 degrees late that evening. High initial conditions along with a peak outdoor temperature of 35 degrees overloaded the cooling system, causing violations of the indoor temperature constraint in two rooms. With regard to $T_1$, it raised quickly from 19 to 21 degrees before noon, but then stayed essentially constant at the 21-degree mark for several hours before being lowered during the evening.
 
-The two days that followed, November 12 and 13, were less warm and, as a result, the MPC controller successfully modulated the valves so as to guarantee constraint satisfaction. It is evident how $\theta_1$, $\theta_2$ and $\theta_3$ assume lower values when $T_\text{out}$ is low, and tend to saturate at their maximum during working hours, which matches our intuition.  Lastly, we focus on the data from November 13, where one can readily see a sudden peak in the indoor temperatures, being also present in $T_{\text{sup}}$. This was caused by a momentary halt in the water pumps responsible for the chilled water circuit--an event that could be regarded as a fault from a control system perspective. During this period, as there was no water circulation through the AHU cooling coils, there was also no refrigeration and the indoor spaces received warm air since the fans were kept on. As soon as the pumps were again activated, the chiller immediately decreased the supply water temperature and the operation was normalized. During daytime, the indoor climate was kept within the desired limits despite the valves staying saturated at their low values, even at noon. The fact that almost no additional actuation was needed is due to that day being a Saturday, when no operations are scheduled and the three doors present in the environment are minimally opened and closed. This demonstrates how strong the internal heat gains and unmeasured disturbances normally are.
+The two days that followed, November 12 and 13, were less warm and, as a result, the MPC controller successfully modulated the valves to guarantee constraint satisfaction. From the plots, one can notice how $\theta_1$, $\theta_2$ and $\theta_3$ assumed  approximately constant intermediate values (around 60 degrees) during the evenings, and were more aggressively modulated on working hours. We believe this pattern to be due to the economic objective shown in Figure~\ref{fig.thermalAndElectrical}.
 
-To assess the efficiency gains as well as the thermal performance of the deployed strategy, MPC was compared to alternative algorithms, all subject to exactly the same environmental conditions by means of simulations. We underline that this simulation model was calibrated on data that was \textit{not} included in the GPs training set, thus putting to test the MPC prediction capabilities. The disturbance signals $T_\text{out}$, $T_\text{sup}$ and $R_\text{sol}$ from November 10 were employed, and the indoor temperatures of the three rooms were uniformly initialized at values ranging from $17$ to $21$ degrees Celsius. The outdoor temperature profile was processed to yield three different weather scenarios: hot weather, which was exactly the same $T_\text{out}$ curve seen in Figure~\ref{fig.prettyCool}; warm weather, a $-2$°C shifted version of it, peaking at 33°C around noon; and mild weather, a $-5$°C shifted version of it, peaking at peaking at 30°C. Besides the MPC algorithm \eqref{eq.optControlProb}, the following were also tested:
+Lastly, we focus on the data from November 13, where it is possible to see a sudden peak in the indoor temperatures and in $T_{\text{sup}}$ around midnight. This was caused by a momentary halt in the water pumps responsible for the chilled water circuit, an event that could be regarded as a fault from a control system perspective. During this period, as there was no water circulation through the AHU cooling coils, there was also no refrigeration and the indoor spaces received warm air since the fans were kept on. As soon as the pumps were reactivated, the chiller immediately lowered the supply water temperature and normal operation was restored. During daytime, the indoor climate was kept within the desired limits despite the valves staying saturated at their low values, even at noon. The fact that almost no additional actuation was needed is due to that day being a Saturday, when no operations are scheduled for and the three doors present in the environment are minimally opened and closed. This showcases how strong the internal heat gains and unmeasured disturbances normally are.
+
+To assess the efficiency gains as well as the thermal performance of the deployed strategy, MPC was compared to alternative algorithms, all subject to exactly the same environmental conditions by means of simulations. We underline that this simulation model was calibrated on data that was \textit{not} included in the GPs training set, thus putting to test the MPC prediction capabilities. The disturbance signals $T_\text{out}$, $T_\text{sup}$ and $R_\text{sol}$ from November 10 were employed, and the indoor temperatures of the three rooms were uniformly initialized at values ranging from $17$ to $21$ degrees Celsius. The outdoor temperature profile was processed to yield three different weather scenarios: hot weather, which was exactly the same $T_\text{out}$ curve seen in Figure~\ref{fig.prettyCool}; warm weather, a $-2$°C shifted version of it, peaking at 33°C around noon; and mild weather, a $-5$°C shifted version of it, peaking at 30°C. Besides the MPC algorithm \eqref{eq.optControlProb}, the following were also tested:
 \begin{itemize}
-	\item An MPC controller (herein referred to as REF) with perfect prediction capabilities, perfect disturbance information ($T_\text{out}$ and $T_\text{sup}$) and a long prediction horizon of five hours.
+	\item An MPC controller, which will be referred to as REF, with perfect prediction capabilities, perfect disturbance information ($T_\text{out}$ and $T_\text{sup}$) and a long prediction horizon of five hours.
 	\item PI controllers featuring anti-windup schemes and feedforward components to enhance their performance.
 	\item Rule-based ON/OFF controllers that set the valves respectively to $\theta_\text{min}$ and $\theta_\text{max}$ if the indoor temperatures were below or above the set-point. 
 	\item An average $(\theta_\text{max}-\theta_\text{min})/2$ controller (AVG) whose instantaneous values are selected by sampling the interval $\theta_\text{min}$ to $\theta_\text{max}$ using a uniform distribution.
@@ -323,17 +326,31 @@ To assess the efficiency gains as well as the thermal performance of the deploye
 	\includegraphics[width=0.55\linewidth]{../images/chap3_simres_mild.pdf} \\[12pt]
 	\includegraphics[width=0.55\linewidth]{../images/chap3_simres_warm.pdf} \\[12pt]
 	\includegraphics[width=0.55\linewidth]{../images/chap3_simres_hot.pdf} 
-	\caption{Simulation results of the normalized energy consumption and thermal performance (average temperature bound violation) of different control strategies. Three weather profiles were considered: mild, warm and hot. The indoor temperatures were initialized at different values according to the color scheme:...} 
+	\caption{Simulation results of the normalized energy consumption and thermal performance (average temperature bound violation) of different control strategies. Three weather profiles were considered: mild, warm and hot. The indoor temperatures were initialized at three different values according to the color scheme: 17°C (blue), 19°C (orange) and 21°C (red).} 
 	%{\Large \textcolor{color_20}{\textbf{-}}} 17 °C, {\Large \textcolor{color_21}{\textbf{-}}} 19 °C, {\Large \textcolor{color_22}{\textbf{-}}} 21 °C.}
 	\label{fig.powerRes}
 \end{figure*}
 
-In order to gauge the energy saving potential of the HVAC plant, we executed the REF strategy described above. This algorithm can reach significant efficiency gains while guaranteeing thermal comfort since it exploits a perfect internal model as well as perfect forecasts of the outdoor and supply water temperatures.
+The REF strategy described above was conceived and tested precisely gauge the energy saving potential of the hospital HVAC plant. This algorithm, thanks to the way it was designed with a perfect internal model and perfect forecast of the outdoor temperature and supply water temperatures, will indicate what can be achieved realistically.
+%In order to gauge the energy saving potential of the HVAC plant, we executed the REF strategy described above. This algorithm can reach significant efficiency gains while guaranteeing thermal comfort since it exploits a perfect internal model as well as perfect forecasts of the outdoor and supply water temperatures.
 
 The obtained normalized energy consumption results and average room thermal comfort violations are shown in Figure~\ref{fig.powerRes}. Since the non-linear chiller curves described in Section~\ref{sec:learningChiller} were employed to measure the energy consumption, the reader is reminded that there is a non-trivial relationship between the weather conditions and indoor temperatures, and the final consumed energy. This aspect is due to the nature of the chiller and not the use of any particular control technique. As a last note, one specific energy normalization factor was used for each weather scenario shown in Figure~\ref{fig.powerRes} to enhance clarity.
 
 Glancing at the mild and warm weather plots, one notices how the REF and MPC data tended to be close together, and relatively far from the PI, ON/OFF and AVG clusters. Moreover, the REF and MPC points were also mostly to the left side and vertically below the other data given the same indoor temperature conditions--thus confirming their superior performance in terms of energy efficiency and indoor climate regulation. The ON/OFF and PI controllers yielded overall similar numerical results and, surprisingly, were outperformed by the AVG scheme under mild weather and starting indoor temperatures of $17\,$°C and $19\,$°C. AVG nevertheless performed poorly under warm weather and $21\,$°C, and hot weather in general. All in all, the predictive control strategies MPC and REF yielded the best results in the mild and warm weather cases, whereas the separation among them and the other techniques became less evident under hot weather, indicating a less important advantage over classical control.
 
-By analyzing the horizontal scales and contrasting REF to PI, ON/OFF and AVG, one concludes that this particular HVAC plant could have its efficiency boosted by approximately 2.5\%, 4\% and 5\% respectively in the mild, warm and hot weather scenarios. Notice how, as opposed to studies such as \cite{bunning2020experimental}, these numbers refer to the electrical energy associated with a chiller, and not to a cumulative thermal energy. Moreover, as the hospital was not subject to time-varying electricity prices, the contrast among control strategies was not as broad as for instance the one reported in \cite{joe2022investigation}. The proposed MPC strategy \eqref{eq.optControlProb} attained results close to the aforementioned maximum percentages. Quantitatively, MPC lead to a maximum energy efficiency improvement of 2.29\%, 3.13\% and 4.76\% respectively in mild, warm and hot weather, when compared to the PI and ON/OFF counterparts.
+By analyzing the horizontal scales and contrasting REF to PI, ON/OFF and AVG, one concludes that this particular HVAC plant could have its efficiency boosted by approximately 2.5\%, 4\% and 5\% respectively in the mild, warm and hot weather scenarios. Notice how, as opposed to studies such as \cite{bunning2020experimental}, these numbers refer to the electrical energy associated with a chiller, and not to a cumulative thermal energy. Moreover, as the hospital was not subject to time-varying electricity prices, the contrast among control strategies was not as stark as for instance the one reported in \cite{joe2022investigation}. The proposed MPC strategy \eqref{eq.optControlProb} attained results close to the aforementioned maximum percentages. Quantitatively, MPC lead to a maximum energy efficiency improvement of 2.29\%, 3.13\% and 4.76\% respectively in mild, warm and hot weather, with respect to the PI and ON/OFF counterparts.
 
 \section{Conclusions and outlook}
+
+The practical investigation presented in this chapter revolved around the use of Gaussian process models paired with MPC to autonomously control the industrial cooling system of a hospital building. The study was complex in comparison with many works found in the literature: it involved three thermal zones, multiple subsystems, two distinct sensor networks, four strong exogenous disturbances, and the direct control of low-level elements. From a computational viewpoint, expensive non-parametric models were used along with a non-convex MPC formulation, both in the cost and in the constraints, which brought about numerical challenges. All things considered, the chosen approach was able to guarantee the indoor comfort whenever enough actuation power was available, while also delivering superior energy performance when compared to alternative strategies.
+
+During the course of the project, a large portion of time was dedicated to studying the building and the AHUs, deciding what signals to measure, and setting up the necessary hardware. The second most time-consuming task was certainly building a functional data ingestion pipeline for the GPs: applying the necessary filters, detecting non-reliable periods, and crafting the feature vectors by delaying the time-series and patching multiple experiments together. We therefore believe that the control community could greatly benefit from a reliable toolbox to design and test GP autoregressive models with ease, which would certainly further increase the popularity of this technique. 
+
+With regard to possible future investigations, we consider exploring sparse Gaussian processes based on pseudo-inputs \citep{bauer2016understanding} to lower the computational burden of the MPC controller and allow for longer prediction horizons. Taking a step back, it would also be interesting to experimentally investigate with different combinations of models (not necessarily Gaussian processes) and training objectives to find a pair that is able to automatically reject spurious data periods, not only isolated points, and dispense with the need of a meticulous pre-processing stage. Indeed, being robust to an abnormal period of operation at training time could alleviate the workload of field engineers and help fulfill the promising an effortless modeling phase. In our view, parametric techniques such as neural networks are less sensitive as their internal constants are adjusted gradually by the data, whereas non-parametric techniques absorb the whole dataset and make use of it during inference. That said, perhaps additional (unobserved) covariates could be used to explain an abnormal trajectory, essentially acting as a disturbance model. Finally, from an HVAC systems perspective, more encompassing investigations could include the control of additional variables, e.g. the air flow delivered to the rooms, as well as the regulation of physical quantities other than the temperatures such as the indoor spaces humidity levels.
+
+%Possible future investigations:  models/training procedures that are less sensible to spurious data/periods. The use of sparse GPs and alternative numerical methods (SQP) to speed-up online computations.
+%A forced-air investigation where additional variables are controlled, e.g. the fans speed (variable-air volume) and the flow of chilled water, or with extra output variables, e.g. the humidity in each zone. Or having an electricity meter installed to precisely measure the demand and more exactly assess the economical advantages of the advanced control scheme, which would help motivate practitioners to make use of it.
+
+
+
+
