--- a/tail/bibliography.bib
+++ b/tail/bibliography.bib
@@ -321,6 +321,31 @@
 	organization={PMLR}
 }
 
+@misc{united2022,
+	title={2022 Global Status Report for Buildings and Construction: Towards
+	a Zero‑emission, Efficient and Resilient Buildings and Construction Sector},
+	author={{United Nations Environment Programme}},
+	year={2022},
+	publisher={Nairobi}
+}
+
+@misc{iea2022,
+	title={Roadmap for Energy-Efficient Buildings and Construction in ASEAN},
+	author={International Energy Agency IEA},
+	year={2022},
+	publisher={IEA Publication}
+}
+
+@incollection{stluka2018architectures,
+	title={Architectures and algorithms for building automation—An industry view},
+	author={Stluka, Petr and Parthasarathy, Girija and Gabel, Steve and Samad, Tariq},
+	booktitle={Intelligent building control systems},
+	pages={11--43},
+	year={2018},
+	publisher={Springer}
+}
+
+
 @inproceedings{koller2018learning,
 	title={Learning-based model predictive control for safe exploration},
 	author={Koller, Torsten and Berkenkamp, Felix and Turchetta, Matteo and Krause, Andreas},
@@ -511,6 +536,49 @@
 	publisher={IEEE}
 }
 
+@article{bunning2020experimental,
+	title={Experimental demonstration of data predictive control for energy optimization and thermal comfort in buildings},
+	author={B{\"u}nning, Felix and Huber, Benjamin and Heer, Philipp and Aboudonia, Ahmed and Lygeros, John},
+	journal={Energy and Buildings},
+	volume={211},
+	pages={109792},
+	year={2020},
+	publisher={Elsevier}
+}
+
+@article{joe2022investigation,
+	title={Investigation on pre-cooling potential of UFAD via model-based predictive control},
+	author={Joe, Jaewan},
+	journal={Energy and Buildings},
+	volume={259},
+	pages={111898},
+	year={2022},
+	publisher={Elsevier}
+}
+
+@article{kim2015offset,
+	title={Offset-free model predictive control for the power control of three-phase AC/DC converters},
+	author={Kim, Seok-Kyoon and Choi, Dae-Keun and Lee, Kyo-Beum and Lee, Young Il},
+	journal={IEEE Transactions on Industrial Electronics},
+	volume={62},
+	number={11},
+	pages={7114--7126},
+	year={2015},
+	publisher={IEEE}
+}
+
+@article{karamanakos2019guidelines,
+	title={Guidelines for the design of finite control set model predictive controllers},
+	author={Karamanakos, Petros and Geyer, Tobias},
+	journal={IEEE Transactions on Power Electronics},
+	volume={35},
+	number={7},
+	pages={7434--7450},
+	year={2019},
+	publisher={IEEE}
+}
+
+
 @inproceedings{diwale2014optimization,
 	title={Optimization of an airborne wind energy system using constrained gaussian processes},
 	author={Diwale, Sanket Sanjay and Lymperopoulos, Ioannis and Jones, Colin N},
@@ -519,6 +587,18 @@
 	year={2014},
 	organization={IEEE}
 }
+
+@article{casadi,
+	title={CasADi: a software framework for nonlinear optimization and optimal control},
+	author={Andersson, Joel AE and Gillis, Joris and Horn, Greg and Rawlings, James B and Diehl, Moritz},
+	journal={Mathematical Programming Computation},
+	volume={11},
+	number={1},
+	pages={1--36},
+	year={2019},
+	publisher={Springer}
+}
+
 
 @article{khosravi2022safety,
 	title={Safety-aware cascade controller tuning using constrained Bayesian optimization},
@@ -753,6 +833,34 @@
 	publisher={IEEE}
 }
 
+@incollection{wright2019efficient,
+	title={Efficient convex optimization for linear MPC},
+	author={Wright, Stephen J},
+	booktitle={Handbook of model predictive control},
+	pages={287--303},
+	year={2019},
+	publisher={Springer}
+}
+
+@inproceedings{pannocchia2015offset,
+	title={Offset-free tracking MPC: A tutorial review and comparison of different formulations},
+	author={Pannocchia, Gabriele},
+	booktitle={2015 European control conference (ECC)},
+	pages={527--532},
+	year={2015},
+	organization={IEEE}
+}
+
+@inproceedings{middlebrook1976general,
+	title={A general unified approach to modelling switching-converter power stages},
+	author={Middlebrook, Richard D and Cuk, Slobodan},
+	booktitle={1976 IEEE power electronics specialists conference},
+	pages={18--34},
+	year={1976},
+	organization={IEEE}
+}
+
+
 @inproceedings{amos2017optnet,
 	title={Optnet: Differentiable optimization as a layer in neural networks},
 	author={Amos, Brandon and Kolter, J Zico},
@@ -768,6 +876,35 @@
 	journal={Advances in neural information processing systems},
 	volume={32},
 	year={2019}
+}
+
+@article{hertneck2018learning,
+	title={Learning an approximate model predictive controller with guarantees},
+	author={Hertneck, Michael and K{\"o}hler, Johannes and Trimpe, Sebastian and Allg{\"o}wer, Frank},
+	journal={IEEE Control Systems Letters},
+	volume={2},
+	number={3},
+	pages={543--548},
+	year={2018},
+	publisher={IEEE}
+}
+
+
+@inproceedings{wabersich2018linear,
+	title={Linear model predictive safety certification for learning-based control},
+	author={Wabersich, Kim P and Zeilinger, Melanie N},
+	booktitle={2018 IEEE Conference on Decision and Control (CDC)},
+	pages={7130--7135},
+	year={2018},
+	organization={IEEE}
+}
+
+
+@article{kingma2014adam,
+	title={Adam: A method for stochastic optimization},
+	author={Kingma, Diederik P and Ba, Jimmy},
+	journal={arXiv preprint arXiv:1412.6980},
+	year={2014}
 }
 
 
